--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^2.2.0",
     "axios": "^0.21.1",
     "next": "^14.2.10",
     "react": "^18.2.0",
