--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "^14.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.1",
